--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ jobs:
         docker:
             - image: docker:17.09.1-ce-git
         steps:
+	    - add_ssh_keys:
+      	        fingerprints:
+        	    - "13:46:11:40:fe:5b:29:c6:20:35:51:4c:ed:37:16:10"
             - checkout 
             - setup_remote_docker:
                 docker_layer_caching: true
